Fixed gap under footer

--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,12 @@ hr{
   margin-right:auto;
 }
 
+.license{
+text-align:center;
+padding-bottom: 1em;
+margin: none;
+}
+
 
 @media (max-width: 800px) {
  
